--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
         <h1>Ítalo Neves</h1>
             <ul>
-                <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round"
                             class="lucide lucide-house w-4 h-4 mr-2 transition-all duration-300 text-purple-700 scale-110"
@@ -23,7 +23,7 @@
                                 d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z">
                             </path>
                         </svg>Inicio</a></li>
-                <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round"
                             class="lucide lucide-user w-4 h-4 mr-2 transition-all duration-300 text-gray-500 group-hover:text-purple-600 group-hover:scale-110"
@@ -31,7 +31,7 @@
                             <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
                             <circle cx="12" cy="7" r="4"></circle>
                         </svg> Sobre mim</a></li>
-                <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round"
                             class="lucide lucide-gallery-thumbnails w-4 h-4 mr-2 transition-all duration-300 text-gray-500 group-hover:text-purple-600 group-hover:scale-110"
@@ -42,7 +42,7 @@
                             <path d="M14 21h1"></path>
                             <path d="M19 21h1"></path>
                         </svg> Portifólio</a></li>
-                <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round"
                             class="lucide lucide-mail w-4 h-4 mr-2 transition-all duration-300 text-gray-500 group-hover:text-purple-600 group-hover:scale-110"
@@ -51,13 +51,16 @@
                             <rect x="2" y="4" width="20" height="16" rx="2"></rect>
                         </svg> Contato</a></li>
             </ul>
-            <a class="curri" href="#">Dowload CV</a>
+            <!-- <div class="curri-box"> -->
+                <a class="curri" href="#">Dowload CV</a>
+            <!-- </div> -->
         </nav>
     </header>
     <main>
         <section class="info-main">
-            <div class="info-left">
-                <p class="magiic"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+           <div class="content">
+             <div class="info-left">
+                <p class="magic"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-sparkles w-3.5 h-3.5 mr-1.5 text-purple-500"
                         aria-hidden="true">
@@ -130,13 +133,16 @@
                 </div>
             </div>
             <div class="info-right">
-                
-
-                <spline-viewer class="robot-3d" url="https://prod.spline.design/F8-aOtQx1Ylm9-B2/scene.splinecode"></spline-viewer>
-            </div>
+                <spline-viewer class="robot-3d" url="https://prod.spline.design/zLOuebhKyF5axAe6/scene.splinecode"></spline-viewer>
+           </div>
+        </section>
+        <section class="projetos">
+            asdfkjfkkkkkkkkkkkkkk
+            kkkkkkkkkkkkkkkkkkkkkkkk
         </section>
     </main>
-    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.12/build/spline-viewer.js"></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.13/build/spline-viewer.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
