animacao na sec1

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <section class="info-main">
            <div class="content">
              <div class="info-left">
-                <p class="magic"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+               <div class="box-mag">
+                 <p class="magic"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-sparkles w-3.5 h-3.5 mr-1.5 text-purple-500"
                         aria-hidden="true">
@@ -71,6 +72,7 @@
                         <path d="M22 4h-4"></path>
                         <circle cx="4" cy="20" r="2"></circle>
                     </svg>Pronto para Inovar</p>
+               </div>
                 <h2>Desenvolvedor Web</h2>
                 <p class="stk">Full-Stack Develloper</p>
                     <p class="desc">Crafting intelligent solutions from data through deep learning, statistics, and real-world insight.</p>
@@ -82,7 +84,7 @@
                     <p>photoshop</p>
                 </div>
                 <div class="inter">
-                    <a href="#">Projetos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                    <a href="https://www.youtube.com/watch?v=zWmaohjrkRw">Projetos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-external-link w-3.5 h-3.5 text-gray-700 group-hover:rotate-45 transform transition-all duration-300 z-10"
