--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Italo Neves</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -75,8 +78,11 @@
 
                     <h2>Olá, eu sou ìtalo.</h2>
                     <p class="stk">Full-Stack Develloper</p>
-                    <p class="desc">Crafting intelligent solutions from data through deep learning, statistics, and
-                        real-world insight.</p>
+                    <p class="desc">I create beutiful, function, and user-centerd digital experiences. With
+
+                        2+ years of experiences in web Development, I bring ideas to life through
+
+                        clean code and thoughtful design</p>
                     <div class="tecs">
                         <p>Html</p>
                         <p>Css</p>
@@ -146,8 +152,139 @@
                 </div>
             </div>
         </section>
-        <section class="projetos">
-            div.
+        <section class="sobre-mim">
+            <div class="sb-left">
+                <h3>ABOUT ME</h3>
+                <h4>Building Meaningful
+                    Digital Experiences</h4>
+                <p class="desc-sb-mim">I'm a creative front-end developer passionate about building modern and
+                    responsive web experiences.
+                    My journey began with a love for design and evolved into a deep curiosity for how the web works —
+                    combining
+                    logic with creativity to bring ideas to life.
+
+                    When I'm not coding, I enjoy learning new technologies, improving my projects,
+                    and exploring better ways to make the web faster and more engaging.
+                    I believe in continuous learning, attention to detail, and the power of clean, meaningful design</p>
+
+            </div>
+            <div class="sb-right">
+                <img src="./imgs/img-sb-mim.png" alt="">
+            </div>
+        </section>
+        <section class="projetos-my">
+            <h3>Projects</h3>
+            <h4>Featured Work</h4>
+            <p>A showcase of my recent projects demonstrating expertise in full-stack
+                development, modern frameworks, and creative problem-solving.</p>
+            <div class="uni-projects">
+                <article>
+                    <img src="" alt="">
+                    <h5>Youtube page</h5>
+                    <p class="desc-proj">
+                        A showcase of my recent projects demonstrating expertise in full-stack
+                        development, modern frameworks, and creative problem-solving.
+                    </p>
+                    <div class="tecs-info">
+                        <p>HTML</p>
+                        <p>CSS</p>
+                    </div>
+                    <div class="ver-projeto">
+                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
+                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="" alt="">
+                    <h5>Salão de beleza</h5>
+                    <p class="desc-proj">
+                        A showcase of my recent projects demonstrating expertise in full-stack
+                        development, modern frameworks, and creative problem-solving.
+                    </p>
+                    <div class="tecs-info">
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>Java Script</p>
+                    </div>
+                    <div class="ver-projeto">
+                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
+                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="" alt="">
+                    <h5>Kiwify page</h5>
+                    <p class="desc-proj">
+                        A showcase of my recent projects demonstrating expertise in full-stack
+                        development, modern frameworks, and creative problem-solving.
+                    </p>
+                    <div class="tecs-info">
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>Java Script</p>
+                    </div>
+                    <div class="ver-projeto">
+                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
+                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="" alt="">
+                    <h5>Site Coral</h5>
+                    <p class="desc-proj">
+                        A showcase of my recent projects demonstrating expertise in full-stack
+                        development, modern frameworks, and creative problem-solving.
+                    </p>
+                    <div class="tecs-info">
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>Java Script</p>
+                    </div>
+                    <div class="ver-projeto">
+                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
+                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    </div>
+                </article>
+
+            </div>
+        </section>
+        <section class="servi">
+            <h3>Services</h3>
+            <h4>Our Features & Services</h4>
+            <div class="serv-me">
+                <article>
+                    <img src="	https://stalwart-baklava-8ed433.netlify.app/images/web.svg" alt="">
+                    <p class="title-serv">Web Development</p>
+                    <p class="dec-title-serv">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi
+                        nemo.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://stalwart-baklava-8ed433.netlify.app/images/app.svg" alt="">
+                    <p class="title-serv">Web Development</p>
+                    <p class="dec-title-serv">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi
+                        nemo.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://stalwart-baklava-8ed433.netlify.app/images/app.svg" alt="">
+                    <p class="title-serv">Web Development</p>
+                    <p class="dec-title-serv">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi
+                        nemo.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://stalwart-baklava-8ed433.netlify.app/images/seo.svg" alt="">
+                    <p class="title-serv">Web Development</p>
+                    <p class="dec-title-serv">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi
+                        nemo.
+                    </p>
+                </article>
+            </div>
         </section>
     </main>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.13/build/spline-viewer.js"></script>
