navegaçao pc e layout projetos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <h1>Ítalo Neves</h1>
+           
             <ul>
                 <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -26,7 +26,7 @@
                                 d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z">
                             </path>
                         </svg>Inicio</a></li>
-                <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                <li><a class="sec" href="#sobre"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-user w-4 h-4 mr-2 transition-all duration-300 text-gray-500 group-hover:text-purple-600 group-hover:scale-110"
@@ -34,17 +34,7 @@
                             <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
                             <circle cx="12" cy="7" r="4"></circle>
                         </svg> Sobre mim</a></li>
-                <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-gallery-thumbnails w-4 h-4 mr-2 transition-all duration-300 text-gray-500 group-hover:text-purple-600 group-hover:scale-110"
-                            aria-hidden="true">
-                            <rect width="18" height="14" x="3" y="3" rx="2"></rect>
-                            <path d="M4 21h1"></path>
-                            <path d="M9 21h1"></path>
-                            <path d="M14 21h1"></path>
-                            <path d="M19 21h1"></path>
-                        </svg> Portifólio</a></li>
+              
                 <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round"
@@ -53,9 +43,12 @@
                             <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"></path>
                             <rect x="2" y="4" width="20" height="16" rx="2"></rect>
                         </svg> Contato</a></li>
+                        <li>
+                            <a class="curri" href="#">Dowload CV</a>
+
+                        </li>
             </ul>
             <!-- <div class="curri-box"> -->
-            <a class="curri" href="#">Dowload CV</a>
             <!-- </div> -->
         </nav>
     </header>
@@ -91,7 +84,7 @@
                         <p>photoshop</p>
                     </div>
                     <div class="inter">
-                        <a href="https://www.youtube.com/watch?v=zWmaohjrkRw">Projetos <svg
+                        <a href="#proj">Projetos <svg
                                 xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round"
@@ -152,99 +145,122 @@
                 </div>
             </div>
         </section>
-        <section class="sobre-mim">
-            <div class="sb-left">
-                <h3>ABOUT ME</h3>
-                <h4>Building Meaningful
-                    Digital Experiences</h4>
-                <p class="desc-sb-mim">I'm a creative front-end developer passionate about building modern and
-                    responsive web experiences.
-                    My journey began with a love for design and evolved into a deep curiosity for how the web works —
-                    combining
-                    logic with creativity to bring ideas to life.
+        <section class="sobre-mim" id="sobre">
+            <div class="sb-mim-content">
+                <div class="sb-left">
+                    <h3>ABOUT ME</h3>
+                    <h4>Building Meaningful
+                        Digital Experiences</h4>
+                    <p class="desc-sb-mim">I'm a creative front-end developer passionate about building modern and
+                        responsive web experiences.
+                        My journey began with a love for design and evolved into a deep curiosity for how the web works
+                        —
+                        combining
+                        logic with creativity to bring ideas to life.
 
-                    When I'm not coding, I enjoy learning new technologies, improving my projects,
-                    and exploring better ways to make the web faster and more engaging.
-                    I believe in continuous learning, attention to detail, and the power of clean, meaningful design</p>
+                        When I'm not coding, I enjoy learning new technologies, improving my projects,
+                        and exploring better ways to make the web faster and more engaging.
+                        I believe in continuous learning, attention to detail, and the power of clean, meaningful design
+                    </p>
 
-            </div>
-            <div class="sb-right">
-                <img src="./imgs/img-sb-mim.png" alt="">
+                </div>
+                <div class="sb-right">
+                    <img src="./imgs/img-sb-mim.png" alt="">
+                </div>
             </div>
         </section>
-        <section class="projetos-my">
-            <h3>Projects</h3>
-            <h4>Featured Work</h4>
-            <p>A showcase of my recent projects demonstrating expertise in full-stack
-                development, modern frameworks, and creative problem-solving.</p>
-            <div class="uni-projects">
-                <article>
-                    <img src="" alt="">
-                    <h5>Youtube page</h5>
-                    <p class="desc-proj">
-                        A showcase of my recent projects demonstrating expertise in full-stack
-                        development, modern frameworks, and creative problem-solving.
-                    </p>
-                    <div class="tecs-info">
-                        <p>HTML</p>
-                        <p>CSS</p>
-                    </div>
-                    <div class="ver-projeto">
-                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                    </div>
-                </article>
-                <article>
-                    <img src="" alt="">
-                    <h5>Salão de beleza</h5>
-                    <p class="desc-proj">
-                        A showcase of my recent projects demonstrating expertise in full-stack
-                        development, modern frameworks, and creative problem-solving.
-                    </p>
-                    <div class="tecs-info">
-                        <p>HTML</p>
-                        <p>CSS</p>
-                        <p>Java Script</p>
-                    </div>
-                    <div class="ver-projeto">
-                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                    </div>
-                </article>
-                <article>
-                    <img src="" alt="">
-                    <h5>Kiwify page</h5>
-                    <p class="desc-proj">
-                        A showcase of my recent projects demonstrating expertise in full-stack
-                        development, modern frameworks, and creative problem-solving.
-                    </p>
-                    <div class="tecs-info">
-                        <p>HTML</p>
-                        <p>CSS</p>
-                        <p>Java Script</p>
-                    </div>
-                    <div class="ver-projeto">
-                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                    </div>
-                </article>
-                <article>
-                    <img src="" alt="">
-                    <h5>Site Coral</h5>
-                    <p class="desc-proj">
-                        A showcase of my recent projects demonstrating expertise in full-stack
-                        development, modern frameworks, and creative problem-solving.
-                    </p>
-                    <div class="tecs-info">
-                        <p>HTML</p>
-                        <p>CSS</p>
-                        <p>Java Script</p>
-                    </div>
-                    <div class="ver-projeto">
-                        <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                    </div>
-                </article>
+        <section class="projetos-my" id="proj">
+            <div class="content-projects">
+                <div class="titleinfo">
+                    <h3>Projects</h3>
+                    <h4>Featured Work</h4>
+                    <p>A showcase of my recent projects demonstrating expertise in full-stack
+                        development, modern frameworks, and creative problem-solving.</p>
+                </div>
+                <div class="uni-projects">
+                    <article class="pro-box">
+                        <img src="./imgs/Captura de tela 2025-12-27 164927.png" alt="">
+                        <h5>Youtube page</h5>
+                        <p class="desc-proj">
+                            Modern online store with product filtering, cart, and payment system.
+                        </p>
+                        <div class="tecs-info">
+                            <p>HTML</p>
+                            <p>CSS</p>
+                        </div>
+                        <div class="ver-projeto">
+                            <a href="https://github.com/ItaloNNeves/youtube-page" target="_blank">
+                                <i class="fa-brands fa-github"></i> Git Hub
+                            </a>
+                            <a href="https://italonneves.github.io/youtube-page/" target="_blank">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </article>
+
+                    <article class="pro-box">
+                        <img src="./imgs/Captura de tela 2025-12-27 164848.png" alt="">
+                        <h5>Salão de beleza</h5>
+                        <p class="desc-proj">
+                            Modern online store with product filtering, cart, and payment system.
+                        </p>
+                        <div class="tecs-info">
+                            <p>HTML</p>
+                            <p>CSS</p>
+                            <p>Java Script</p>
+                        </div>
+                        <div class="ver-projeto">
+                            <a href="https://github.com/ItaloNNeves/Salao-Vania" target="_blank">
+                                <i class="fa-brands fa-github"></i> Git Hub
+                            </a>
+                            <a href="https://italonneves.github.io/Salao-Vania/" target="_blank">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </article>
+
+                    <article class="pro-box">
+                        <img src="./imgs/Captura de tela 2025-12-27 164809.png" alt="">
+                        <h5>Kiwify page</h5>
+                        <p class="desc-proj">
+                            Modern online store with product filtering, cart, and payment system.
+                        </p>
+                        <div class="tecs-info">
+                            <p>HTML</p>
+                            <p>CSS</p>
+                            <p>Java Script</p>
+                        </div>
+                        <div class="ver-projeto">
+                            <a href="https://github.com/ItaloNNeves/kiwify-pag" target="_blank">
+                                <i class="fa-brands fa-github"></i> Git Hub
+                            </a>
+                            <a href="https://italonneves.github.io/kiwify-pag/" target="_blank">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </article>
+
+                    <article class="pro-box">
+                        <img src="./imgs/Captura de tela 2025-12-27 165032.png" alt="">
+                        <h5>Site Coral</h5>
+                        <p class="desc-proj">
+                            Modern online store with product filtering, cart, and payment system.
+                        </p>
+                        <div class="tecs-info">
+                            <p>HTML</p>
+                            <p>CSS</p>
+                            <p>Java Script</p>
+                        </div>
+                        <div class="ver-projeto">
+                            <a href="https://github.com/ItaloNNeves/siteCoral" target="_blank">
+                                <i class="fa-brands fa-github"></i> Git Hub
+                            </a>
+                            <a href="https://italonneves.github.io/siteCoral/" target="_blank">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </article>
+                </div>
 
             </div>
         </section>
