atualizaçao sec contato

--- a/index.html
+++ b/index.html
@@ -302,6 +302,18 @@
                 </article>
             </div>
         </section>
+        <section class="contact">
+            <h3>Services</h3>
+            <h4>Our Features & Services</h4>
+            <div class="inf">
+                <div class="info-box1">
+                    <p>I'm always open to discuss exciting projects and new opportunities. Let's collaborate!</p>
+                    <p class="tipos-contato"><i class="fa-solid fa-envelope"></i>  </p>
+                    <p class="tipos-contato"><i class="fa-solid fa-phone"></i>  </p>
+                    <p class="tipos-contato"><i class="fa-solid fa-location-dot"></i>  </p>
+                </div>
+            </div>
+        </section>
     </main>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.13/build/spline-viewer.js"></script>
     <script src="script.js"></script>
