--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-           
+
             <ul>
                 <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -34,8 +34,8 @@
                             <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
                             <circle cx="12" cy="7" r="4"></circle>
                         </svg> Sobre mim</a></li>
-              
-                <li><a class="sec" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+
+                <li><a class="sec" href="#contact"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-mail w-4 h-4 mr-2 transition-all duration-300 text-gray-500 group-hover:text-purple-600 group-hover:scale-110"
@@ -43,10 +43,10 @@
                             <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"></path>
                             <rect x="2" y="4" width="20" height="16" rx="2"></rect>
                         </svg> Contato</a></li>
-                        <li>
-                            <a class="curri" href="#">Dowload CV</a>
+                <li>
+                    <a class="curri" href="#">Dowload CV</a>
 
-                        </li>
+                </li>
             </ul>
             <!-- <div class="curri-box"> -->
             <!-- </div> -->
@@ -84,10 +84,9 @@
                         <p>photoshop</p>
                     </div>
                     <div class="inter">
-                        <a href="#proj">Projetos <svg
-                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round"
+                        <a href="#proj">Projetos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round"
                                 class="lucide lucide-external-link w-3.5 h-3.5 text-gray-700 group-hover:rotate-45 transform transition-all duration-300 z-10"
                                 aria-hidden="true">
                                 <path d="M15 3h6v6"></path>
@@ -302,15 +301,60 @@
                 </article>
             </div>
         </section>
-        <section class="contact">
+        <section class="contact" id="contact">
             <h3>Services</h3>
             <h4>Our Features & Services</h4>
             <div class="inf">
-                <div class="info-box1">
-                    <p>I'm always open to discuss exciting projects and new opportunities. Let's collaborate!</p>
-                    <p class="tipos-contato"><i class="fa-solid fa-envelope"></i>  </p>
-                    <p class="tipos-contato"><i class="fa-solid fa-phone"></i>  </p>
-                    <p class="tipos-contato"><i class="fa-solid fa-location-dot"></i>  </p>
+                <div class="ctt-left">
+                    <p class="p-prin">I'm always open to discuss exciting projects and new opportunities. Let's
+                        collaborate!</p>
+                    <div class="info-box1">
+                        <p class="tipos-contato"><i class="fa-solid fa-envelope"></i>italonascimento070@gmail.com</p>
+                        <p class="tipos-contato"><i class="fa-solid fa-phone"></i>(75) 9 8291-1046</p>
+                        <p class="tipos-contato"><i class="fa-solid fa-location-dot"></i>São Gonçalo dos Campos , BA</p>
+                    </div>
+                    <div class="redes">
+                        <a class="github" target="_blank" href="https://github.com/ItaloNNeves"><svg
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="lucide lucide-github w-3.5 h-3.5 text-gray-600 group-hover:text-purple-600 transition-colors"
+                                aria-hidden="true">
+                                <path
+                                    d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4">
+                                </path>
+                                <path d="M9 18c-4.51 2-5-2-7-2"></path>
+                            </svg></a>
+                        <a class="linkedin" target="_blank"
+                            href="https://www.linkedin.com/in/%C3%ADtalo-neves-18434a314/"><svg
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="lucide lucide-linkedin w-3.5 h-3.5 text-gray-600 group-hover:text-purple-600 transition-colors"
+                                aria-hidden="true">
+                                <path
+                                    d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
+                                </path>
+                                <rect width="4" height="12" x="2" y="9"></rect>
+                                <circle cx="4" cy="4" r="2"></circle>
+                            </svg></a>
+                        <a class="insta" target="_blank" href="https://www.instagram.com/italo__neves/"><svg
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="lucide lucide-instagram w-3.5 h-3.5 text-gray-600 group-hover:text-purple-600 transition-colors"
+                                aria-hidden="true">
+                                <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                <line x1="17.5" x2="17.51" y1="6.5" y2="6.5"></line>
+                            </svg></a>
+                    </div>
+                </div>
+                <div class="ctt-right">
+                    <input class="ctt-in" type="text" placeholder="Your Name">
+                    <input class="ctt-in" type="text" placeholder="Your Email">
+                    <textarea class="ctt-msg" name="" id="" placeholder="Your Message"></textarea>
+                    <input class="ctt-sub" type="submit" value="Send Mensage">
                 </div>
             </div>
         </section>
